# depthai-ros

./: .gitignore  .gitmodules  .zshrc  Dockerfile  README.md  build.sh  desktop.dockerfile  entrypoint.sh  install_dependencies.sh  install_dependencis.sh  install_requirements.sh  package.xml  setup.bash  setup.cfg  setup.py  underlay.repos
depthai-ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
depthai-ros/debian/: udev
depthai_bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml
depthai_bridge/launch/: rae_desc_launch.py  static_tfs.py  urdf.launch  urdf_launch.py
depthai_bridge/rviz/: pointCloud.rviz
depthai_bridge/src/: BridgePublisher.cpp  CameraControl.cpp  DepthPostProcessing.cpp  DetectionConverter.cpp  DisparityConverter.cpp  GenericPipelinePublisher.cpp  ImageConverter.cpp  ImgDetectionConverter.cpp  ImuConverter.cpp  SpatialDetection2DConverter.cpp  SpatialDetectionConverter.cpp  TFPublisher.cpp  TrackDetectionConverter.cpp  TrackSpatialDetectionConverter.cpp  TrackedFeaturesConverter.cpp  TrackletConverter.cpp  TransformDataConverter.cpp
depthai_bridge/urdf/: depthai_descr.urdf  depthai_descr.urdf.xacro  oak-d.urdf  rae.urdf.xacro
depthai_descriptions/: CMakeLists.txt  package.xml
depthai_descriptions/env-hooks/: depthai_descriptions.dsv.in  depthai_descriptions.sh.in
depthai_descriptions/launch/: urdf.launch  urdf_launch.py
depthai_descriptions/urdf/: base_descr.urdf.xacro  depthai_descr.urdf.xacro
depthai_examples/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml
depthai_examples/launch/: mobile_publisher.launch  mobile_publisher.launch.py  multi_stereo_inertial_node.launch  rgb_publisher.launch  rgb_publisher.launch.py  rgb_stereo_node.launch  rgb_stereo_node.launch.py  stereeo_mimicer.launch  stereo.launch.py  stereo_inertial_node.launch  stereo_inertial_node.launch.py  stereo_mimicer.launch  stereo_node.launch  stereo_nodelet.launch  stereo_setup.launch  tracker_publisher.launch  tracker_yolov4_node.launch.py  tracker_yolov4_spatial_node.launch.py  urdf_dep.launch  yolov4_publisher.launch  yolov4_publisher.launch.py
depthai_examples/lib/: nn_pipeline.cpp  rgb_pipeline.cpp  rgb_stereo_pipeline.cpp  stereo_from_host.cpp  stereo_pipeline.cpp
depthai_examples/ros1_src/: crop_control_service.cpp  depth_crop_control.cpp  mobilenet_publisher.cpp  rgb_publisher.cpp  stereo_inertial_publisher.cpp  stereo_mimic_node.cpp  stereo_nodelet.cpp  stereo_publisher.cpp  yolov4_spatial_publisher.cpp
depthai_examples/ros2_src/: depth_crop_control.cpp  mobilenet_publisher.cpp  rgb_publisher.cpp  rgb_stereo_node.cpp  stereo_inertial_publisher.cpp  stereo_publisher.cpp  yolov4_spatial_publisher.cpp
depthai_examples/rviz/: rgb_camera.rviz  stereoInertial.rviz  stereoInertialDepthAlign.rviz  stereoInertialDepthAlignROS2.rviz  stereoInertialROS1.rviz  stereoPointCloud.rviz  stereoPointCloud_v1.rviz  stereo_config.rviz  stereo_nodelet.rviz
depthai_examples/scripts/: imu_extrinsic_test.py  markerPublisher.py
depthai_examples/src/: crop_control_service.cpp  depth_crop_control.cpp  feature_tracker_publisher.cpp  mobilenet_publisher.cpp  rgb_publisher.cpp  rgb_stereo_node.cpp  rgb_video_subscriber.cpp  stereo_inertial_publisher.cpp  stereo_mimic_node.cpp  stereo_nodelet.cpp  stereo_publisher.cpp  tracker_publisher.cpp  tracker_yolov4_publisher.cpp  tracker_yolov4_spatial_publisher.cpp  yolov4_publisher.cpp  yolov4_spatial_publisher.cpp
depthai_examples/urdf/: depthai_descr.urdf
depthai_filters/: CMakeLists.txt  nodelet_plugins.xml  package.xml
depthai_filters/cfg/: wls.cfg
depthai_filters/config/: detection.yaml  feature_tracker.yaml  spatial_bb.yaml  usb_cam_overlay.yaml  wls.yaml
depthai_filters/launch/: det2d_usb_cam_overlay.launch  det2d_usb_cam_overlay.launch.py  example_det2d_overlay.launch  example_det2d_overlay.launch.py  example_feature_3d.launch  example_feature_3d.launch.py  example_feature_tracker.launch  example_feature_tracker.launch.py  example_seg_overlay.launch  example_seg_overlay.launch.py  example_wls_filter.launch  example_wls_filter.launch.py  spatial_bb.launch  spatial_bb.launch.py  spatial_polygon.launch.py
depthai_filters/src/: detection2d_overlay.cpp  feature_tracker_overlay.cpp  features_3d.cpp  rectify.cpp  rtabmap_sync.cpp  segmentation_overlay.cpp  spatial_bb.cpp  spatial_polygon.cpp  utils.cpp  wls_filter.cpp
depthai_ros_driver/: CMakeLists.txt  nodelet_plugins.xml  package.xml  plugins.xml
depthai_ros_driver/cfg/: parameters.cfg
depthai_ros_driver/config/: calibration.yaml  camera.yaml  depth.yaml  example_nn.yaml  example_spatial_nn.yaml  isaac_vslam.yaml  low_bandwidth.yaml  mobilenet.json  multicam.rviz  multicam.yaml  multicam_example.yaml  oak_d_pro_w.yaml  oak_d_sr.yaml  oak_d_w.yaml  oak_d_w_pro.yaml  pcl.yaml  rae_camera.yaml  rgb.yaml  rgbd.yaml  rgbd_color.yaml  segmentation.yaml  spatial_nn.rviz  spatial_yolo.yaml  sr_poe_rgbd.yaml  sr_rgbd.yaml  stereo_from_rosbag.yaml
depthai_ros_driver/launch/: calibration.launch  calibration.launch.py  camera.launch  camera.launch.py  camera_as_part_of_a_robot.launch.py  depth.launch.py  example_marker_publish.launch  example_marker_publish.launch.py  example_multicam.launch  example_multicam.launch.py  example_nn.launch.py  example_segmentation.launch  example_segmentation.launch.py  example_spatial_nn.launch.py  multicam.launch.py  pointcloud.launch  pointcloud.launch.py  rae_camera.launch.py  rgb.launch.py  rgbd.launch.py  rgbd_pcl.launch  rgbd_pcl.launch.py  rtabmap.launch  rtabmap.launch.py  sr_poe_rgbd.launch  sr_poe_rgbd_pcl.launch.py  sr_rgbd_pcl.launch  sr_rgbd_pcl.launch.py  stereo_from_rosbag.launch.py
depthai_ros_driver/scripts/: obj_pub.py
depthai_ros_driver/src/: camera.cpp  camera_node.cpp  ipc_test.cpp  pipeline_generator.cpp  tf_publisher.cpp  utils.cpp
depthai_ros_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
depthai_ros_msgs/cfg/: CameraControl.cfg  StereoDepth.cfg
depthai_ros_msgs/msg/: AutoFocusCtrl.msg  (+23 more)
depthai_ros_py_bindings/: CMakeLists.txt  package.xml
vrxperience_msgs/: CMakeLists.txt  package.xml
(+214 files in other folders)
