<?xml version="1.0"?>
<package format="3">
  <name>depthai-ros</name>
  <version>2.10.3</version>
  <description>The depthai-ros package</description>

  <maintainer email="adam.serafin@luxonis.com">Adam Serafin</maintainer>
  <author>Sachin Guruswamy</author>

  <license>MIT</license>


  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  
  <exec_depend>depthai</exec_depend>
  <exec_depend>depthai_ros_msgs</exec_depend>
  <exec_depend>depthai_bridge</exec_depend>
  <exec_depend>depthai_descriptions</exec_depend>
  <exec_depend>depthai_filters</exec_depend>
  <exec_depend>depthai_examples</exec_depend>
  <exec_depend>depthai_ros_driver</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>

</package>
