<?xml version="1.0"?>
<package format="3">
  <name>depthai_bridge</name>
  <version>2.5.3</version>
  <description>The depthai_bridge package</description>

  <maintainer email="sachin@luxonis.com">Sachin Guruswamy</maintainer>
  <author>Sachin Guruswamy</author>

  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- <build_export_depend>libboost-dev</build_export_depend> -->
  <depend>libboost-dev</depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>depthai</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>ros_environment</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>vision_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type condition="$ROS_VERSION == 1">catkin</build_type>
      <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
