<?xml version="1.0"?>
<package format="3">
  <name>depthai_bridge</name>
  <version>2.9.0</version>
  <description>The depthai_bridge package</description>

  <maintainer email="sachin@luxonis.com">Sachin Guruswamy</maintainer>
  <author>Sachin Guruswamy</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libboost-dev</depend>
  <depend>rclcpp</depend>

  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>depthai</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>ros_environment</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>composition_interfaces</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
